--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "babel-jest": "22.4.3",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.3",
-    "react-test-renderer": "^16.3.0-alpha.1"
+    "react-test-renderer": "^16.3.0-alpha.1",
+    "react-native-root-toast": "3.0.1"
   },
   "jest": {
     "preset": "react-native"
