--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.4"
+    "react-native": "0.54.4",
+    "react-native-scrollable-tab-view": "^0.8.0",
+    "react-navigation": "^1.5.9"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
