--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,6 +140,8 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    //照片选择器
+    compile project(':react-native-image-picker')
 }
 
 // Run this once to be able to run the application with BUCK
