--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.4",
     "react-native-deprecated-custom-components": "latest",
+    "react-native-image-picker": "^0.26.7",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-navigation": "^1.5.11"
   },
