--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-deprecated-custom-components": "latest",
     "react-native-image-picker": "^0.26.7",
     "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-swiper": "^1.5.13",
     "react-navigation": "^1.5.11"
   },
   "devDependencies": {
